Fix typo in my own name
Finish what commit 36d7605e0f8b86ed330ba6e3695229325f8df8c6 started

Signed-off-by: Luís Pereira <luis.artur.pereira@gmail.com>

--- a/man-kcheckgmail.1.docbook
+++ b/man-kcheckgmail.1.docbook
@@ -15,7 +15,7 @@
 <surname>Geissert</surname>
 <affiliation><address><email>atomo64@gmail.com</email></address></affiliation></author>
 <author>
-<firstname>Luis</firstname>
+<firstname>Luís</firstname>
 <surname>Pereira</surname>
 <affiliation><address><email>luis.artur.pereira@gmail.com</email></address></affiliation></author>
 <date>2009-06-18</date>
@@ -151,7 +151,7 @@ url="help:/kcheckgmail">help:/kcheckgmail</ulink>
 <title>Authors</title>
 <para>Matthew Wlazlo &lt;mwlazlo@gmail.com&gt;</para>
 <para>Raphael Geissert &lt;atomo64@gmail.com&gt;</para>
-<para>Luis Pereira &lt;luis.artur.pereira@gmail.com&gt;</para>
+<para>Luís Pereira &lt;luis.artur.pereira@gmail.com&gt;</para>
 </refsect1>
 -->
 
