--- a/doc/en/index.docbook
+++ b/doc/en/index.docbook
@@ -21,9 +21,14 @@
 <surname>Geissert</surname>
 <affiliation><address><email>atomo64@gmail.com</email></address></affiliation>
 </author>
+<author>
+<firstname>Luís</firstname>
+<surname>Pereira</surname>
+<affiliation><address><email>luis.artur.pereira@gmail.com</email></address></affiliation>
+</author>
 </authorgroup>
-<date>2007-08-19</date>
-<releaseinfo>0.5.8.dev</releaseinfo>
+<date>2009-01-13</date>
+<releaseinfo>0.6.0</releaseinfo>
 <abstract>
 <para>&kcheckgmail; is a simple KDE systray application that notifies when new email is received in a Gmail account.</para>
 </abstract>
@@ -43,7 +48,7 @@
       <listitem><para>Available in multiple languages</para></listitem>
       <!--<listitem><para>Google Applications for Domains Support! </para></listitem>-->
       <listitem><para>Email snippets</para></listitem>
-      <listitem><para>DCOP interface to Google Mail</para></listitem>
+      <listitem><para>D-Bus interface to Google Mail</para></listitem>
       <listitem><para>Custom search</para></listitem>
       <listitem><para>Store password safely, using the KDE Wallet</para></listitem>
       <listitem><para>Customizable check interval</para></listitem>
@@ -62,7 +67,7 @@
 
     <sect1 id="requirements">
       <title>Requirements</title>
-      <para>&kcheckgmail; 0.5.8.dev has only been tested with KDE 3.5.x but it might also work with older versions.</para>
+      <para>&kcheckgmail; 0.6.x has only been tested with KDE 4.2 and higher  but it might also work with older (KDE4) versions.</para>
     </sect1>
 
     <sect1 id="compilation-and-installation">
@@ -70,9 +75,11 @@
 
       <para>Compiling &kcheckgmail; is very easy. The following should do
 	it: <screen>
-<prompt>%</prompt> <userinput><command>./configure</command></userinput>
+<prompt>%</prompt> <userinput><command>mkdir</command> build</userinput>
+<prompt>%</prompt> <userinput><command>cd</command> build</userinput>
+<prompt>%</prompt> <userinput><command>cmake</command> .. -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix`</userinput>
 <prompt>%</prompt> <userinput><command>make</command></userinput>
-<prompt>%</prompt> <userinput><command>make</command> install</userinput></screen>
+<prompt>%</prompt> <userinput><command>sudo make</command> install</userinput></screen>
       </para>
 
       <para>That should do it! Should you run into any problems,
@@ -90,12 +97,12 @@
 	url="http://kcheckgmail.sourceforge.net/help.html">online FAQ</ulink>.</para>
     </sect1>
 
-    <sect1 id="dcop-interface">
-      <title>DCOP Interface</title>
+    <sect1 id="dbus-interface">
+      <title>D-Bus Interface</title>
 
-      <para>Since version 0.5.8.dev &kcheckgmail; provides a more useful DCOP interface:
+      <para>Version 0.5.7 &kcheckgmail; introduced a more useful DCOP interface. The current D-Bus interface is just a port of the DCOP one:
 	<screen>
-<prompt>%</prompt> <userinput><command>dcop kcheckgmail KCheckGmailIface</command></userinput>
+<prompt>%</prompt> <userinput><command>qdbus org.kcheckgmail.kcheckgmail /kcheckgmail</command></userinput>
 int mailCount()
 void checkMailNow()
 void whereAmI()
@@ -111,7 +118,7 @@ QMap&lt;QString,unsigned int&gt; getLabels()
 QString getGaiaName()
 </screen></para>
       <itemizedlist>
-      <title>DCOP Interface methods</title>
+      <title>D-Bus Interface methods</title>
       <listitem><para>mailCount: The number of unread messages (depends on the search query being used).</para></listitem>
       <listitem><para>checkMailNow: Makes &kcheckgmail; check for new emails.</para></listitem>
       <listitem><para>whereAmI: Displays a window displaying &kcheckgmail;'s location.</para></listitem>
