--- a/po/es.po
+++ b/po/es.po
@@ -522,12 +522,12 @@ msgstr "KCheckGMail ya está en ejecución!\n"
 #: rc.cpp:1
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr "Raphael Geissert"
+msgstr "Felipe Morales,Raphael Geissert"
 
 #: rc.cpp:2
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr "atomo64@gmail.com"
+msgstr "felipe.morales@wanadoo.es,atomo64@gmail.com"
 
 #. i18n: file: advancedsettingsbase.ui:13
 #. i18n: ectx: property (windowTitle), widget (QWidget, AdvancedSettingsBase)
@@ -1008,16 +1008,6 @@ msgid ""
 msgstr ""
 "Mini aplicación que muestra el número de mensajes sin leer en una cuenta de "
 "Gmail."
-
-#~ msgid ""
-#~ "_: NAME OF TRANSLATORS\n"
-#~ "Your names"
-#~ msgstr "Felipe Morales,Raphael Geissert"
-
-#~ msgid ""
-#~ "_: EMAIL OF TRANSLATORS\n"
-#~ "Your emails"
-#~ msgstr "felipe.morales@wanadoo.es,atomo64@gmail.com"
 
 #~ msgid ""
 #~ "_n: Attachment: %1\n"
