--- a/po/ko.po
+++ b/po/ko.po
@@ -496,16 +496,14 @@ msgid "KCheckGMail is already running!\n"
 msgstr ""
 
 #: rc.cpp:1
-#, fuzzy
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr "Gmail 사용자 이름"
+msgstr "ChoSeongWoo"
 
 #: rc.cpp:2
-#, fuzzy
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr "Gmail 사용자 이름"
+msgstr "syn333@gmail.com"
 
 #. i18n: file: advancedsettingsbase.ui:13
 #. i18n: ectx: property (windowTitle), widget (QWidget, AdvancedSettingsBase)
@@ -990,16 +988,6 @@ msgid ""
 "A Kicker applet to display how many email messages you have in your Gmail "
 "account."
 msgstr "Gmail 계정에 몇개의 메일이 있는지 시스템 트레이에 표시"
-
-#~ msgid ""
-#~ "_: NAME OF TRANSLATORS\n"
-#~ "Your names"
-#~ msgstr "ChoSeongWoo"
-
-#~ msgid ""
-#~ "_: EMAIL OF TRANSLATORS\n"
-#~ "Your emails"
-#~ msgstr "syn333@gmail.com"
 
 #, fuzzy
 #~ msgid ""
