--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -486,16 +486,14 @@ msgid "KCheckGMail is already running!\n"
 msgstr ""
 
 #: rc.cpp:1
-#, fuzzy
 msgctxt "NAME OF TRANSLATORS"
 msgid "Your names"
-msgstr "Seu usuario do Gmail"
+msgstr "Rogério Pereira Araújo"
 
 #: rc.cpp:2
-#, fuzzy
 msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
-msgstr "Seu usuario do Gmail"
+msgstr "rogerio.araujo@gmail.com"
 
 #. i18n: file: advancedsettingsbase.ui:13
 #. i18n: ectx: property (windowTitle), widget (QWidget, AdvancedSettingsBase)
